# spot_price_analyzer

./: .gitignore  README.md  pyproject.toml
src/: spot_checker.py
